<resources>
    <string name="app_name">NextFlix</string>
    <string name="hero_movie_poster">Featured movie poster</string>
    <string name="movie_poster">Featured movie poster</string>
    <string name="play_button">Play</string>

    <string name="nextflix">NEXTFLIX</string>
    <string name="Landing_Page_Headline">Unlimited movies, TV shows, and more</string>
    <string name="Landing_Page_Secondary_Headline">Watch anywhere. Completely free.</string>
    <string name="Landing_Page_Registration">Get Started</string>
    <string name="Landing_Page_Login">Sign In</string>

    <!-- Category Management -->
    <string name="management_screen">Management Screen</string>
    <string name="add_new_category">Add New Category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="category_name">Category Name</string>
    <string name="description">Description</string>
    <string name="sort_order">Sort Order</string>
    <string name="promoted">Promoted</string>
    <string name="display_in_menu">Display in Menu</string>
    <string name="movies_count">Movies: %d</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_confirmation">Are you sure you want to delete this category?</string>
    <string name="add_movie">Add Movie</string>

        <!-- Movie Form -->
    <string name="add_new_movie">Add New Movie</string>
    <string name="movie_name">Movie Name</string>
    <string name="duration_minutes">Duration (minutes)</string>
    <string name="release_year">Release Year</string>
    <string name="age_restriction">Age Restriction</string>
    <string name="director">Director</string>
    <string name="language">Language</string>
    <string name="uploads">Uploads</string>
    <string name="upload_poster">Upload Movie Poster</string>
    <string name="upload_trailer">Upload Trailer</string>
    <string name="upload_movie">Upload Movie</string>
    <string name="field_required">This field is required</string>
    <string name="please_fill_required_fields">Please fill all required fields</string>
    <string name="add_actor">Add Actor</string>
    <string name="actors">Actors</string>
    <string name="categories">Categories</string>
    <string name="actor_name_hint">Actor Name</string>
    <string name="error_opening_file">error opening file!</string>
    <string name="error_file_too_large">file too big!</string>
    <string name="error_processing_file">error processing file!</string>
    <string name="upload_success">Upload Success!</string>
    <string name="upload_failed">Upload Failed!</string>
    <string name="network_error_upload">network error upload</string>
    <string name="select_category_warning">Please select at least one category</string>
    <string name="invalid_year">Enter a valid year</string>
    <string name="invalid_age_restriction">Enter a valid age restriction</string>
    <string name="video_required">Video is require</string>
    <string name="movie_create_success">Movie Created Successfully</string>
    <string name="movie_create_failed">Movie Creation Failed</string>
    <string name="network_error">network error\n</string>
    <string name="error_processing_form">error prossecing</string>
    <string name="poster_preview">Poster Preview</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_movie_confirmation">Are you sure you want to delete this movie?</string>
    <string name="movie_update_success">Movie updated successfully</string>
    <string name="movie_update_failed">Failed to update movie</string>
    <string name="movie_delete_success">Movie deleted successfully</string>
    <string name="movie_delete_failed">Failed to delete movie</string>


    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_to_nextflix">New to NextFlix?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="home">Home</string>
    <string name="my_nextflix">My NextFlix</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="already_have_account">Already Have Account?</string>

    <string name="starring">Starring</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="admin">Admin</string>


</resources>